# ln-chat

./: .gitignore  check_vanna_training.py  create_user.py  diagnose_vanna.py  pyproject.toml  requirements.txt
backend/: auth.py  config.py  database.py  main.py  models.py  vanna_service.py
frontend/: app.py
training/: config.py  retrain_vanna.py  train_vanna.py
