[project]
name = "ln-chat"
version = "0.1.0"
description = ""
authors = [
    {name = "Daxigi",email = "maximilianogimenez91@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb (>=1.0.15,<2.0.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "openai (>=1.93.0,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "streamlit (>=1.46.1,<2.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
